[gd_scene load_steps=22 format=3 uid="uid://ky4df5x8b5ax"]

[ext_resource type="Script" path="res://Personajes/player1.gd" id="1_q4v2i"]
[ext_resource type="Resource" uid="uid://b7gbfn62gg7bq" path="res://Objetos/playerInventory.tres" id="2_bkqce"]
[ext_resource type="SpriteFrames" uid="uid://cgtxs8i3j7coo" path="res://Personajes/sprite_animado_pj.tres" id="2_osfix"]
[ext_resource type="Texture2D" uid="uid://vgkjcq74qusj" path="res://arte/ataque/ataque-der.png" id="4_22cfy"]
[ext_resource type="Texture2D" uid="uid://uuexmdkyhaju" path="res://arte/ataque/ataque-derecha/ataque-der-prueba1.png" id="5_x8g4d"]
[ext_resource type="Texture2D" uid="uid://ygy8mpqvujbt" path="res://arte/ataque/ataque-derecha/ataque-der-prueba2.png" id="6_tsxy1"]
[ext_resource type="Texture2D" uid="uid://bvb5x1xmcwknd" path="res://arte/ataque/ataque-derecha/ataque-der-prueba3.png" id="7_muued"]
[ext_resource type="Texture2D" uid="uid://c1qgtmf6hyu20" path="res://arte/ataque/ataque-derecha/ataque-der-prueba5.png" id="8_ff0uo"]
[ext_resource type="Texture2D" uid="uid://b8q36p5nv0qet" path="res://arte/ataque/ataque izquierda/ataque-iz-prueba1.png" id="9_122d4"]
[ext_resource type="Texture2D" uid="uid://dy451frruwmsi" path="res://arte/ataque/ataque izquierda/ataque-iz-prueba2.png" id="10_ff6i1"]
[ext_resource type="Texture2D" uid="uid://b0jfxglndvvf0" path="res://arte/ataque/ataque izquierda/ataque-iz-prueba3.png" id="11_a4f28"]
[ext_resource type="Texture2D" uid="uid://cnb78tql01jc0" path="res://arte/ataque/ataque izquierda/ataque-iz-prueba5.png" id="12_ae1l6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bgvfw"]
height = 56.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_46uhp"]
height = 54.0

[sub_resource type="Animation" id="Animation_30got"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_d5xq0"]
resource_name = "hustBlink"
length = 0.4
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 0.537255), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4jt1d"]
_data = {
"RESET": SubResource("Animation_30got"),
"hustBlink": SubResource("Animation_d5xq0")
}

[sub_resource type="Animation" id="Animation_svuou"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_22cfy")]
}

[sub_resource type="Animation" id="Animation_x5pw7"]
resource_name = "ataque"
length = 0.5
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("5_x8g4d"), ExtResource("6_tsxy1"), ExtResource("7_muued"), ExtResource("8_ff0uo")]
}

[sub_resource type="Animation" id="Animation_ojd1m"]
resource_name = "ataque-izquierda"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("9_122d4"), ExtResource("10_ff6i1"), ExtResource("11_a4f28"), ExtResource("12_ae1l6")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p7c1a"]
_data = {
"RESET": SubResource("Animation_svuou"),
"ataque": SubResource("Animation_x5pw7"),
"ataque-izquierda": SubResource("Animation_ojd1m")
}

[node name="player" type="CharacterBody2D"]
position = Vector2(36, 38)
script = ExtResource("1_q4v2i")
inventory = ExtResource("2_bkqce")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
process_mode = 1
process_thread_group = 1
process_thread_group_order = 0
process_thread_messages = 0
clip_children = 2
texture_filter = 1
sprite_frames = ExtResource("2_osfix")
animation = &"ataq-det-qui"

[node name="ColorRect" type="ColorRect" parent="AnimatedSprite2D"]
offset_left = -20.0
offset_top = -30.0
offset_right = 19.0
offset_bottom = 34.0
color = Color(1, 0, 0, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, 2)
shape = SubResource("CapsuleShape2D_bgvfw")

[node name="HurtBox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-1, 2)
shape = SubResource("CapsuleShape2D_46uhp")

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4jt1d")
}

[node name="hurstTimer" type="Timer" parent="."]
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-2, 1)
texture = ExtResource("4_22cfy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p7c1a")
}

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_exited" from="HurtBox" to="." method="_on_hurt_box_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
